--- a/src/pages/stocks.html
+++ b/src/pages/stocks.html
@@ -3,32 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stocks</title>
+    <title>Stocks - Stock Trading App</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/trading.css">
 </head>
 <body>
     <header>
-        <h1>Available Stocks</h1>
+        <h1>Stock Market</h1>
+        <nav>
+            <ul>
+                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="stocks.html">Stocks</a></li>
+                <li><a href="transactions.html">Transactions</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section id="stocks-list">
-            <h2>Stocks</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Symbol</th>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Stock items will be dynamically inserted here -->
-                </tbody>
-            </table>
-        </section>
-    </main>
+
+    <div class="container">
+        <div class="stock-search">
+            <input type="text" placeholder="Search stocks..." class="search-input">
+            <button class="button">Search</button>
+        </div>
+
+        <div class="stock-card">
+            <div class="stock-info">
+                <h3>AAPL</h3>
+                <div class="stock-price price-up">$150.25</div>
+                <p>Apple Inc.</p>
+                <button class="trade-button buy">Buy</button>
+            </div>
+
+            <div class="stock-info">
+                <h3>GOOGL</h3>
+                <div class="stock-price price-down">$2,750.50</div>
+                <p>Alphabet Inc.</p>
+                <button class="trade-button buy">Buy</button>
+            </div>
+            <!-- More stock cards will be added dynamically -->
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Stock Trading App</p>
+    </footer>
+
     <script src="../assets/js/api.js"></script>
     <script src="../assets/js/stocks.js"></script>
 </body>
