--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -37,6 +37,7 @@
         </div>
 
         <div class="trading-chart">
+            <!-- this is the graph of OWNED stocks -->
             <!-- Portfolio performance chart will be inserted here via JavaScript -->
         </div>
 
@@ -64,7 +65,39 @@
                         <button class="trade-button sell">Sell</button>
                     </td>
                 </tr>
-                <!-- More stock entries will be added dynamically -->
+                <tr>
+                    <td>GOOGL</td>
+                    <td>5</td>
+                    <td>$2,800.00</td>
+                    <td>$2,950.00</td>
+                    <td class="price-up">+$750.00</td>
+                    <td>
+                        <button class="trade-button buy">Buy More</button>
+                        <button class="trade-button sell">Sell</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>AMZN</td>
+                    <td>8</td>
+                    <td>$3,200.00</td>
+                    <td>$3,150.00</td>
+                    <td class="price-down">-$400.00</td>
+                    <td>
+                        <button class="trade-button buy">Buy More</button>
+                        <button class="trade-button sell">Sell</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>MSFT</td>
+                    <td>12</td>
+                    <td>$300.00</td>
+                    <td>$310.00</td>
+                    <td class="price-up">+$120.00</td>
+                    <td>
+                        <button class="trade-button buy">Buy More</button>
+                        <button class="trade-button sell">Sell</button>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
